etape final du devoir a rendre pour mercredi

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,10 +21,10 @@
                                 <a class="nav-link" href="/">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/exemple-post">Exemple POST</a>
+                                <a class="nav-link" href="/eleve">Lister</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/exemple-http">Exemple Error HTTP</a>
+                                <a class="nav-link" href="/add">Ajouter</a>
                             </li>
                         </ul>
                     </div>
