--- a/templates/questionnaire/list.html.twig
+++ b/templates/questionnaire/list.html.twig
@@ -7,5 +7,8 @@
     {% for questionnaire in questionnaires %}
         <a href="/detail/{{ questionnaire.getIdQuestionnaire }}">{{ questionnaire.getLibelleQuestionnaire }}</a><br>
     {% endfor %}
+    <a href="/hello">Hello</a><br>
+    <a href="/eleve">eleve</a><br>
+
 {% endblock %}
 
